tests for view today added

--- a/spec/fixtures/intervals.yml
+++ b/spec/fixtures/intervals.yml
@@ -10,8 +10,8 @@ two:
 
 three:
   user: testuser
-  start: <%= 2.minute.ago %>
-  stop: <%= 1.minute.ago %>
+  start: <%= 2.second.ago %>
+  stop: <%= 1.second.ago %>
 
 four:
   user: seconduser
