--- a/spec/fixtures/users.yml
+++ b/spec/fixtures/users.yml
@@ -1,11 +1,15 @@
 # password == password
 testuser:
   name: testuser
+  worktime: 28080
+  overtime: 0
   password_hash: "$2a$10$fKXhFeWZ7zjPQxzKu6oshuBE4E5agpZGwYiwLw8.28.ZCTHOPgDy2"
   password_salt: "$2a$10$fKXhFeWZ7zjPQxzKu6oshu"
 
 # password == rambopw
 seconduser:
   name: seconduser
+  worktime: 28080
+  overtime: 0
   password_hash: "$2a$10$SLwc/fHE3z172URD0uk38ekU13uq0tyO05eiqNxGtF6iQcCtS8l9y"
   password_salt: "$2a$10$SLwc/fHE3z172URD0uk38e"
