--- a/spec/fixtures/users.yml
+++ b/spec/fixtures/users.yml
@@ -21,3 +21,11 @@ thriduser:
   overtime: 0
   password_hash: "$2a$10$SLwc/fHE3z172URD0uk38ekU13uq0tyO05eiqNxGtF6iQcCtS8l9y"
   password_salt: "$2a$10$SLwc/fHE3z172URD0uk38e"
+
+# password == rambopw
+fourthuser:
+  name: fourthuser
+  worktime: 28080
+  overtime: 1920
+  password_hash: "$2a$10$SLwc/fHE3z172URD0uk38ekU13uq0tyO05eiqNxGtF6iQcCtS8l9y"
+  password_salt: "$2a$10$SLwc/fHE3z172URD0uk38e"  
